[gd_scene load_steps=17 format=3 uid="uid://drfa08cbtrsr4"]

[ext_resource type="Script" path="res://ui/panel.gd" id="1_pswep"]
[ext_resource type="Texture2D" uid="uid://cwf7jxuctf4xp" path="res://player-idle1.png" id="3_nch13"]
[ext_resource type="Theme" uid="uid://bhv0j0gsv3dnj" path="res://main_theme.tres" id="4_k42ip"]
[ext_resource type="Texture2D" uid="uid://cpobpw1bw8pkw" path="res://pixel_assets/HUD.png" id="5_vusn8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ey03u"]
texture = ExtResource("5_vusn8")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
region_rect = Rect2(95, 207, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxvwo"]
atlas = ExtResource("3_nch13")
region = Rect2(9, 5, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mdam"]
atlas = ExtResource("5_vusn8")
region = Rect2(307, 21, 58, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_depqn"]
atlas = ExtResource("5_vusn8")
region = Rect2(308, 118, 56, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4a72"]
atlas = ExtResource("5_vusn8")
region = Rect2(308, 86, 56, 4)

[sub_resource type="LabelSettings" id="LabelSettings_0sudi"]
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdhr2"]
atlas = ExtResource("5_vusn8")
region = Rect2(307, 6, 58, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_apv6k"]
atlas = ExtResource("5_vusn8")
region = Rect2(308, 135, 56, 2)

[sub_resource type="LabelSettings" id="LabelSettings_56bq5"]
font_size = 8
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xm20p"]
texture = ExtResource("5_vusn8")
region_rect = Rect2(95, 207, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpb6p"]
atlas = ExtResource("5_vusn8")
region = Rect2(50, 210, 12, 12)

[sub_resource type="LabelSettings" id="LabelSettings_q8583"]
font_size = 8
font_color = Color(0, 0, 0, 1)

[node name="Panel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 384.0
offset_bottom = 216.0
script = ExtResource("1_pswep")

[node name="StausPanel" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 92.0
offset_bottom = 21.0

[node name="AvatarBox" type="PanelContainer" parent="StausPanel"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ey03u")

[node name="Avatar" type="TextureRect" parent="StausPanel/AvatarBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_gxvwo")
stretch_mode = 5

[node name="V" type="VBoxContainer" parent="StausPanel"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Health" type="HBoxContainer" parent="StausPanel/V"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="HealthBar" type="TextureProgressBar" parent="StausPanel/V/Health"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.0
value = 0.565
texture_over = SubResource("AtlasTexture_2mdam")
texture_progress = SubResource("AtlasTexture_depqn")
texture_progress_offset = Vector2(1, 1)

[node name="EasedHealthBar" type="TextureProgressBar" parent="StausPanel/V/Health/HealthBar"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0
texture_progress = SubResource("AtlasTexture_i4a72")
texture_progress_offset = Vector2(1, 1)

[node name="HealthNum" type="Label" parent="StausPanel/V/Health"]
layout_mode = 2
theme = ExtResource("4_k42ip")
text = "3"
label_settings = SubResource("LabelSettings_0sudi")

[node name="Energy" type="HBoxContainer" parent="StausPanel/V"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="EnergyBar" type="TextureProgressBar" parent="StausPanel/V/Energy"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.0
value = 1.0
texture_over = SubResource("AtlasTexture_gdhr2")
texture_progress = SubResource("AtlasTexture_apv6k")
texture_progress_offset = Vector2(1, 1)

[node name="EnergyNum" type="Label" parent="StausPanel/V/Energy"]
layout_mode = 2
theme = ExtResource("4_k42ip")
text = "10"
label_settings = SubResource("LabelSettings_56bq5")
horizontal_alignment = 1

[node name="H" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 18.0
grow_horizontal = 0

[node name="PanelContainer" type="PanelContainer" parent="H"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_xm20p")

[node name="TextureRect" type="TextureRect" parent="H/PanelContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_jpb6p")

[node name="Material_num" type="Label" parent="H"]
layout_mode = 2
theme = ExtResource("4_k42ip")
text = "10
"
label_settings = SubResource("LabelSettings_q8583")
